--- a/airflow/.env
+++ b/airflow/.env
@@ -1,1 +1,4 @@
 AIRFLOW_UID=1001
+GCP_PROJECT_ID=gdtc-de-course-389613
+GCP_GCS_BUCKET=airbnb_lake
+_PIP_ADDITIONAL_REQUIREMENTS=glom fastparquet pandas
