--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -1,6 +1,6 @@
 # First-time build can take upto 10 mins.
 
-FROM apache/airflow:2.2.5-python3.9
+FROM apache/airflow:2.6.3
 
 ENV AIRFLOW_HOME=/opt/airflow
 
@@ -9,11 +9,7 @@ RUN apt-get update -qq && apt-get install vim -qqq
 # git gcc g++ -qqq
 
 COPY requirements.txt .
-RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
-RUN pip install --no-cache-dir pandas sqlalchemy psycopg2-binary
-RUN pip install --no-cache-dir glom
-
 
 # Ref: https://airflow.apache.org/docs/docker-stack/recipes.html
 
@@ -38,5 +34,8 @@ RUN DOWNLOAD_URL="https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/goo
     && gcloud --version
 
 WORKDIR $AIRFLOW_HOME
+
+COPY scripts scripts
+RUN chmod +x scripts
 
 USER $AIRFLOW_UID
